Closed Bug 1698284 Opened 4 years ago Closed 4 years ago

Minor non-native-theme high-contrast fixes.

Categories

(Core :: Widget, defect)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Fission Milestone M7a
Tracking Status
firefox88 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(2 files)

No description provided.

Mostly use matching foreground / background colors. Buttonface is the
counterpart of Buttontext, and Highlightext the counterpart of Highlight.

This fixes contrast of checkboxes and radio buttons for example, and a couple
other contrast issues with light themes specially.

This prevents contrast issues with high contrast themes when the page only
specifies some of the colors (which is an issue which we have historically
had on GTK with dark themes for a long time).

Feel free to push back on this if you prefer this, as on GTK we force a light
theme on content anyways, but this is a problem on windows for users that use a
high contrast theme but allow pages to override colors.

Fission Milestone: --- → M7a
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8a4decf8dc29 Minor high-contrast theme tweaks in the non-native theme. r=mstange
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/400864685abc Make the non-native theme not use system colors if we're not overriding the pages' colors. r=morgan
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: