Bug 1698284 - Minor high-contrast theme tweaks in the non-native theme. r=mstange

Mostly use matching foreground / background colors. Buttonface is the
counterpart of Buttontext, and Highlightext the counterpart of Highlight.

This fixes contrast of checkboxes and radio buttons for example, and a couple
other contrast issues with light themes specially.

Differential Revision: https://phabricator.services.mozilla.com/D108319